<resources>
    <string name="app_name">Joypurhat Tourism</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Joypurhat Tourism</string>
    <string name="slide_1_desc">Powered BY: COmpanyName.</string>

    <string name="slide_2_title">Tourisr Spots</string>
    <string name="slide_2_desc">Discover most popular and beautiful tourist destinations in Joypurhat division.</string>

    <string name="slide_3_title">Hotel &amp; Restaurants</string>
    <string name="slide_3_desc">The easiest way to find your favourite restaurants and hotels nearby your destination</string>

    <string name="slide_4_title">Transportation</string>
    <string name="slide_4_desc">Find the available transport services like Bus, Launch &amp; Air.</string>

    <string name="slide_5_title">Language</string>
    <string name="slide_5_desc">Find the available transport services like Bus, Launch &amp; Air.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Share">Share This App</string>


    <string name="lbl_navigation_item_about">About Joypurhat Tourism</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">Copyright © 2016-2017 JoypurHat</string>
    <string name="pref_about_title">Joypurhat Tourism 1.0.0</string>
    <string name="pref_general">General</string>
    <string name="pref_language_summary">Bangla</string>
    <string name="pref_language_title">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="shared_app_info">https://play.google.com/store/apps/details?id=com.joypurhattourism.introslider</string>
    <string name="shared_body">"Joypurhat Tourism "</string>

    <string name="app_copyright">Copyright © District Administration, Joypurhat.</string>


    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>






    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>




    <string name="lbl_navigation_item_atms">ATM Booths</string>
    <string name="lbl_navigation_item_dashboard">Home</string>
    <string name="lbl_navigation_item_districts">District Wise</string>
    <string name="lbl_navigation_item_entertainment">Entertainment</string>
    <string name="lbl_navigation_item_favorite">Favorite</string>
    <string name="lbl_navigation_item_featured">Featured</string>
    <string name="lbl_navigation_item_help_feedback">Help &amp; Feedback</string>
    <string name="lbl_navigation_item_hospitals">Hospitals</string>
    <string name="lbl_navigation_item_hotels">Hotels</string>
    <string name="lbl_navigation_item_invite">Invite</string>
    <string name="lbl_navigation_item_nearby">Nearby</string>
    <string name="lbl_navigation_item_police_station">Police Station</string>
    <string name="lbl_navigation_item_rate_us">Rate Us</string>
    <string name="lbl_navigation_item_religion">Prayer</string>
    <string name="lbl_navigation_item_restaurants">Restaurants</string>
    <string name="lbl_navigation_item_settings">Settings</string>
    <string name="lbl_navigation_item_shopping">Shopping</string>
    <string name="lbl_navigation_item_tourist_spots">Tourist Spots</string>
    <string name="lbl_navigation_item_transportation">Transportation</string>
    <string name="lbl_navigation_item_visited">Visited</string>
    <string name="lbl_navigation_item_wishlist">Wishlist</string>
    <string name="lbl_no">No</string>
    <string name="lbl_religion_church">Church</string>
    <string name="lbl_religion_mosque">Mosque</string>
    <string name="lbl_religion_temple">Temple</string>
    <string name="lbl_taka">Tk</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_back_press">Press once again to exit</string>


    <string name="app_version_code">1.0.0</string>

    <string name="dlg_button_no">NO</string>
    <string name="dlg_button_not_now">NOT NOW</string>
    <string name="dlg_button_ok">OK</string>
    <string name="dlg_button_remove">REMOVE</string>
    <string name="dlg_button_save">SAVE</string>
    <string name="dlg_button_send">SEND</string>
    <string name="dlg_button_yes">YES</string>
    <string name="dlg_content_enable_location">Your location seems to be disabled. Do you want to enable it?</string>
    <string name="dlg_header_title_enable_location">Enable location</string>


    <string name="google_maps_key">AIzaSyBx2Wo52aU_TW4oMbPC6Rl8Pj0NPTImHE8</string>
</resources>
