<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/pref_general">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/list_language"
            android:entryValues="@array/list_language_values"
            android:key="pref_key_language"
            android:summary="@string/pref_language_summary"
            android:title="@string/pref_language_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_about"
        android:title="@string/pref_about">
        <Preference
            android:key="pref_key_about_title"
            android:summary="@string/app_copyright"
            android:title="@string/pref_about_title" />
    </PreferenceCategory>
</PreferenceScreen>
